# tavily-hikari

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  package-lock.json  package.json
.github/scripts/: compute-version.sh
.github/workflows/: ci.yml
docs/: admin-api-keys-batch-input.md  high-anonymity-proxy.md  quota-design.md  tavily-http-api-proxy.md
docs/plan/: README.md
docs/plan/0001:request-logs-gc/: PLAN.md
docs/plan/0001:request-logs-gc/contracts/: README.md  config.md  db.md  http-apis.md
scripts/: start-backend-dev.sh  start-frontend-dev.sh
src/: lib.rs  main.rs  server.rs
tests/e2e/: tavily_http_node.cjs
web/: admin.html  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
web/scripts/: write-version.mjs
web/src/: AdminDashboard.tsx  App.tsx  PublicHome.tsx  admin-main.tsx  api.ts  i18n.tsx  index.css  main.tsx  public-main.tsx  sse.ts
web/src/components/: CherryStudioMock.tsx  LanguageSwitcher.tsx  RollingNumber.tsx  StatusBadge.tsx
web/src/hooks/: useUpdateAvailable.ts
web/src/pages/: TokenDetail.tsx
