[package]
name = "tavily-hikari"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
url = "2.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
