[package]
name = "tavily-hikari"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "http1", "tokio"] }
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["stream", "json"] }
base64 = "0.22"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
tower = { version = "0.4", features = ["util"] }
nanoid = "0.4"
urlencoding = "2.1"
html-escape = "0.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
async-stream = "0.3"
futures-util = "0.3"
